<resources>
    <string name="app_name">Quran</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="index">Index</string>
    <string name="arabic_roots">Arabic Roots</string>
    <string name="verses_ayat">Verses (Ayat )</string>
    <string name="favorite">Favorite</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>