<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_index"
        android:icon="@drawable/ic_index"
        android:title="@string/index"/>

    <item
        android:id="@+id/nav_ayatlist"
        android:icon="@drawable/ic_verset"
        android:title="@string/verses_ayat"/>
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorit_full"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_account"
                android:title="@string/login"/>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_star_rate"
                android:title="@string/rate_us"/>
        </menu>
    </item>


</menu>